# ecScanner

./: .gitignore  52wwEC.txt  CMakeLists.txt  README  README.md  ecsanner.cpp  parser.cpp  parser.hpp
exampleTables/: mechrevo-wujie14.txt
flex/: ecparse.lex  simple1.lex
